--- a/ayoabox.html
+++ b/ayoabox.html
@@ -11,7 +11,9 @@
     <title>Notion Widget Embed Template</title>
 </head>
 <body>
-  
-https://app.ayoa.com/
+
+<iframe width="560" height="315" src="https://app.ayoa.com/" frameborder="0">
+	
+</iframe>
   
 </body>
